overlaping of contentbox fixed

--- a/src/Component/mainContent/mainContent.css
+++ b/src/Component/mainContent/mainContent.css
@@ -4,7 +4,7 @@
     /* max-height: 1400px; */
     left: 10%;
     z-index: 5;
-    top: -40vh;
+    top: -25vh;
     /* bottom: -20vh; */
     /* margin-bottom: -20vh; */
     /* top: 134px; */
